--- a/src/chromiumos/tast/local/bundles/cros/multivm/data/memory_stress.html
+++ b/src/chromiumos/tast/local/bundles/cros/multivm/data/memory_stress.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Alloc memory</title>
   <script src="memory_stress.js"></script>
 </head>
+
 <body>
-<div id="display">
-  Allocating memory...
-</div>
+  <div id="display">
+    Allocating memory...
+  </div>
+  <div id="touch">
+
+  </div>
 </body>
+
 </html>
